overflow-fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -762,10 +762,10 @@ product section Start
     cursor: pointer;
     color: var(--green);
     text-wrap: nowrap !important;
-
  }
 
  .products .shop-now img {
+    display: inline;
     margin-left: 15px;
     transition: transform 0.4s ease; /* Add transition on transform property */
 }
